# vite-repro

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-vite-heuristic-repro  ibazel  package.json  pnpm-lock.yaml
patches/: vite@5.2.10.patch
pkgs/foo-app/: BUILD.bazel  index.html  package.json  vite.config.js
pkgs/foo-app/src/: index.ts
pkgs/foo-lib/: BUILD.bazel  package.json  tsconfig.json
pkgs/foo-lib/src/: ShaderSource.tsx  fragmentShader.glsl  index.ts  types.d.ts  vertexShader.glsl
