bazel_dep(name = "aspect_bazel_lib", version = "2.5.0")
bazel_dep(name = "aspect_rules_js", version = "1.37.0")
bazel_dep(name = "aspect_rules_ts", version = "2.3.0")
bazel_dep(name = "rules_nodejs", version = "6.0.3")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.5.1")
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    lifecycle_hooks = { },
    npmrc = ".npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = { },
    npm_package_target_name = "{dirname}",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

# Must be kept in sync with package.json
rules_ts_ext.deps(
    # Integrity hash as provided from:
    # curl --silent https://registry.npmjs.org/typescript/5.3.2 | jq -r '.dist.integrity'
    #
    # More Info: https://docs.aspect.build/rules/aspect_rules_ts/docs/repositories/#ts_integrity
    ts_integrity = "sha512-vcI4UpRgg81oIRUFwR0WSIHKt11nJ7SAVlYNIu+QpqeyXP+gpQJy/Z4+F0aGxSE4MqwjyXvW/TzgkLAx2AGHwQ",
    ts_version = "5.4.5",
)
use_repo(rules_ts_ext, "npm_typescript")
